src/components/Main.scss
.parent {
  height: 100vh;
  width: 100%;
  background-color: black;
  top: 0;
  /* position: fixed; */
}

.logo-color {
  stroke: #0affa7;
  animation: color-change 12s ease infinite;
}

@keyframes color-change {
  15% {
    stroke: aqua;
  }

  30% {
    stroke: blue;
  }

  45% {
    stroke: red;
  }

  60% {
    stroke: orange;
  }

  75% {
    stroke: purple;
  }

  90% {
    stroke: yellow;
  }

  105% {
    stroke: #0affa7;
  }
}

.burger-color {
  fill: white;
}

.burger-color-div:hover > svg > g > .burger-color {
  animation: color-change-2 3s ease infinite;
}

@keyframes color-change-2 {
  25% {
    fill: #0affa7;
  }

  50% {
    fill: yellow;
  }

  75% {
    fill: red;
  }

  100% {
    fill: aqua;
  }
}

.burger-color-div {
  height: 47px;
  width: 60px;
  margin-top: 30px;
  margin-right: 10vh;
  cursor: pointer;
}

.main-container {
}

.menu-items {
  color: white;
  height: 15vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 60px;
  font-weight: 600;
  cursor: pointer;
  width: 65vw;
  box-shadow: inset 0 0 0 0.09px black;
  transition: box-shadow 1s;
  &:hover {
    box-shadow: inset 65vw 20vh plum;
  }
}

#text-intro::selection {
  background: plum;
}

// @keyframes menuitem-background {
//   from {
//     background-color: black;
//   }
//   to {
//     background-color: plum;
//   }
// }

